ASSERTION FAILED: count >= 1 in WebCore::RenderMultiColumnSet::columnCount https://bugs.webkit.org/show_bug.cgi?id=136365 <rdar://problem/27686727>

Reviewed by Simon Fraser.

Source/WebCore:

Margin value overflow ends up confusing the column count computing logic.

Test: fast/multicol/assert-on-column-count-when-zoomed-in.html

* css/StyleResolver.cpp:
(WebCore::addIntrinsicMargins):

LayoutTests:

* fast/multicol/assert-on-column-count-when-zoomed-in-expected.txt: Added.
* fast/multicol/assert-on-column-count-when-zoomed-in.html: Added.


Canonical link: https://commits.webkit.org/183151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209487 268f45cc-cd09-0410-ab3c-d52691b4dbfc